refine index.html page

--- a/01/testpage/index.html
+++ b/01/testpage/index.html
@@ -5,5 +5,16 @@
 </head>
 <body>
 <h1> Hello World</h1>
+<h2> Phone </h2>
+<p>Show a phone <a href="./phone.html">number</a> and let a external application call the number</p>
+<h2> Video </h2>
+<p>Watch a <a href="./video.html">video</a> in your browser</p>
+<h2> Doctype</h2>
+<p>Use <a href="./doctype.html">DOCTYPE</a> to specify the type of the document the browser consumes.</p>
+<h2> Canvas</h2>
+<p>Use <a href="./canvas.html"> a canvas</a> to create a space where you can
+draw funny images.</p>
+<h2>mark</h2>
+<p>Use <mark>mark</mark> to highlight parts of text.</p>
 </body>
 </html>
